# django-iam

./: .editorconfig  .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.kaos/: config.yml
docs/: advanced_tutorial.rst  conf.py  iam.rst  index.rst  modules.rst  tutorial.rst
docs/contrib/: admin.rst  index.rst  users.rst
example/blog/: admin.py  models.py  rules.py
example/blog/migrations/: 0001_initial.py  0002_blogauthor.py  0002_blogauthorprofile.py  0003_blogpost.py  0004_alter_blogpost_owner.py  0005_blogauthorprofile_is_privileged.py  0006_auto_20220125_0342.py
example/example/: settings.py  urls.py
example/simple/: admin.py  models.py  rules.py
example/simple/migrations/: 0001_initial.py  0002_alter_simpleadminprofile_status.py  0002_blogpost.py  0002_simplemodel.py  0003_authorprofile_is_super_author.py  0003_simpleproxy.py  0004_auto_20210817_1604.py  0004_simplemanager_archived_at.py
example/simple2/: rules.py
example/users/: admin.py  models.py  rules.py
iam/: __init__.py  abstracts.py  admin.py  apps.py  checks.py  factories.py  mixins.py  models.py  predicates.py  registry.py  roles.py  rules.py  signals.py  utils.py
iam/admin/: admin.py  blocks.py
iam/contrib/: perms.py  predicates.py  utils.py
iam/migrations/: 0001_initial.py
iam/rest/: fields.py  serializers.py
tests/: conftest.py  helpers.py  test_Access.py  test_HasOwner.py  test_factories.py  test_models.py  test_perms.py  test_roles.py  test_utils.py
tests/contrib/: test_admin.py  test_perms.py  test_predicates.py  test_users.py  test_utils.py
(+14 files in other folders)
