[metadata]
name = django-iam
version = attr: iam.__version__
description = Roles and access management for django apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaoslabsinc/django-iam
author = Kaos Labs Inc.
author_email = keyvan@keyvanm.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

keywords = django, iam, users, auth, authorization, kaos

[options]
include_package_data = true
packages = find:
install_requires =
    django~=3.2
    rules~=3.0
    django-building-blocks==0.0.5rc2
[options.extras_require]
test =
    tox
    pytest-django
    pytest-pythonpath
    pytest-cov
